# kgdotcom

./: .gitignore  CLAUDE.md  Makefile  README.md  common.py  conference_talk_types.py  conferences.json  current_talks.json  exif.py  generate-conference-pages.py  generate-other-pages.py  generate-resume-page-jinja.py  generate-resume-page.py  generate-writing-page-jinja.py  generate-writing-page.py  generate_conference_pages.py  generate_contact_pages.py  generate_pages.py  generate_photo_pages.py  generate_resume_page.py  generate_resume_page_jinja.py  generate_site.py  generate_sitemap.py  generate_talk_page.py  generate_talk_pages.py  generate_writing_page.py  generate_writing_page_jinja.py  generatetalkpage.py  ignore_error_urls.json  index.html  navigation.py  pagevariables.json  pyproject.toml  requirements.txt  resume.html  talkpages.css  talkpagetemplate.html  talktestpage.html  testindexpage.html
data/: common_meta.json  conferences.json  current_talks.json  interviews.json  music.json  pagevariables.json  resume.json  writing.json
favicon/: new favicon.afdesign
public/: .htaccess  403page.html  404page.html  humans.txt  index.html  keybase.txt  leadingeng.html  manifest.webmanifest  music.html  names.html  nortonsw_8ae7e2e0-1022-0.html  photography.html  resume.html  talkpages.css  writing.html
scripts/: build.sh  photos-filter.txt  photos.sh  publish.sh  run_tests.sh
templates/: contactfile.vcf  contactpage.html  favicon.html  footer.html  google-analytics.html  header.html  indexpagetemplate.html  metadata.html  music-template-jinja.html  sitenav.html  (+19 more)
(+30 files in other folders)
