[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kgdotcom"
version = "1.0.0"
description = "Static site generator for Kevin Goldsmith's personal website"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Kevin Goldsmith", email = "kevin@kevingoldsmith.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "Jinja2",
    "Pillow",
    "qrcode[pil]",
    "requests",
    "requests-cache",
    "markdown",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "pylint",
    "mypy",
    "pip-audit",
    "bandit",
]

[project.scripts]
kgdotcom-generate = "kgdotcom.cli:main"

[project.urls]
Homepage = "https://kevingoldsmith.com"
Repository = "https://github.com/kevingoldsmith/kgdotcom"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pylint]
max-line-length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true